--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EEE">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar"
+            />
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:background="#EEE">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -28,14 +35,13 @@
                 android:id="@+id/mainLayout"
                 android:background="#F6F6F6"
                 tools:context=".activity.MainActivity">
-                <include
-                    android:id="@+id/toolbar"
-                    layout="@layout/toolbar" />
+
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="55dp"
+                    android:paddingBottom="5dp"
                     android:background="#8C1C1E"
                     android:descendantFocusability="beforeDescendants"
                     android:focusableInTouchMode="true">
@@ -45,9 +51,7 @@
                         android:layout_height="match_parent"
                         android:id="@+id/search_in_home"
                         android:background="@drawable/rounded_edittext"
-                        android:layout_margin="10dp"
-                        android:drawableEnd="@drawable/search"
-                        android:drawableRight="@drawable/search"
+                        android:layout_margin="6dp"
                         android:drawablePadding="10dp"
                         android:hint="Search"
                         android:textColor="#000000"
@@ -66,14 +70,13 @@
                     <com.daimajia.slider.library.SliderLayout
                         android:id="@+id/slider"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp" />
+                        android:layout_height="180dp" />
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="65dp"
                     android:id="@+id/linearLayoutMainCategory"
-                    android:background="@drawable/category_gradient"
                     android:orientation="horizontal">
 
 
@@ -81,12 +84,14 @@
                         android:orientation="vertical"
                         android:layout_width="0dip"
                         android:padding="10dp"
+                        android:background="#FFFFFF"
                         android:layout_height="match_parent"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        >
 
                         <ImageView
                             android:layout_width="46dp"
-                            android:layout_height="45dp"
+                            android:layout_height="25dp"
                             android:id="@+id/imageView_babyCare"
                             android:contentDescription="@string/baby_care"
                             android:layout_gravity="center"
@@ -98,26 +103,28 @@
                             android:id="@+id/tv_home_cat_first"
                             android:layout_gravity="center"
                             android:singleLine="true"
+                            android:paddingTop="5dp"
                             android:textSize="@dimen/material_text_caption" />
 
                     </LinearLayout>
 
                     <View
                         android:orientation="horizontal"
-                        android:layout_width="1dp"
+                        android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:background="#c3c3c3"/>
+                        android:background="#EEE"/>
 
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#FFFFFF"
                         android:padding="10dp">
 
                         <ImageView
                             android:layout_width="46dp"
-                            android:layout_height="45dp"
+                            android:layout_height="25dp"
                             android:id="@+id/iv_home_women"
                             android:layout_gravity="center"
                             android:src="@drawable/category_women" />
@@ -125,7 +132,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:paddingTop="5dp"
                             android:id="@+id/tv_home_second"
                             android:layout_gravity="center"
                             android:textSize="@dimen/material_text_caption" />
@@ -133,20 +140,21 @@
 
                     <View
                         android:orientation="horizontal"
-                        android:layout_width="1dp"
+                        android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:background="#c3c3c3"/>
+                        android:background="#EEE"/>
 
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#FFFFFF"
                         android:padding="10dp">
 
                         <ImageView
                             android:layout_width="46dp"
-                            android:layout_height="45dp"
+                            android:layout_height="25dp"
                             android:id="@+id/iv_home_men"
                             android:layout_gravity="center"
                             android:src="@drawable/category_menmen" />
@@ -154,28 +162,29 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
                             android:id="@+id/tv_home_third"
                             android:layout_gravity="center"
+                            android:paddingTop="5dp"
                             android:textSize="@dimen/material_text_caption" />
                     </LinearLayout>
 
                     <View
                         android:orientation="horizontal"
-                        android:layout_width="1dp"
+                        android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:background="#c3c3c3"/>
+                        android:background="#EEE"/>
 
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="#FFFFFF"
                         android:padding="10dp">
 
                         <ImageView
                             android:layout_width="46dp"
-                            android:layout_height="45dp"
+                            android:layout_height="25dp"
                             android:contentDescription="@string/all_category"
                             android:id="@+id/iv_home_all"
                             android:layout_gravity="center"
@@ -184,6 +193,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:paddingTop="5dp"
                             android:text="@string/all_category"
                             android:id="@+id/tv_home_all"
                             android:singleLine="true"
@@ -196,6 +206,7 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginTop="6dp"
                     android:background="#FFFFFF">
 
                     <TextView
@@ -216,37 +227,39 @@
                 <View
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="#c3c3c3"/>
+                    android:layout_height="2dp"
+                    android:background="#EEE"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="175dp"
                     android:background="#FFFFFF">
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
-                        android:layout_height="175dp" android:id="@+id/rv_horizontal">
+                        android:layout_height="match_parent" android:id="@+id/rv_horizontal">
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp">
+                    android:layout_height="180dp"
+                    android:layout_marginTop="6dp">
 
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:background="#A31C1F"
-                        android:layout_height="50dp">
+                        android:background="#FFFFFF"
+                        android:layout_height="40dp">
 
                         <TextView
+                            android:background="#A31C1F"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="sale"
-                            android:textSize="@dimen/material_text_headline"
+                            android:textSize="@dimen/material_text_subhead"
                             android:id="@+id/tv_home_sale"
                             android:textAllCaps="true"
                             android:paddingLeft="10dp"
@@ -260,7 +273,7 @@
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="150dp">
+                        android:layout_height="140dp">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -274,6 +287,7 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginTop="6dp"
                     android:background="#FFFFFF">
 
                     <TextView
@@ -295,8 +309,8 @@
                 <View
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#c3c3c3"/>
+                    android:layout_height="2dp"
+                    android:background="#EEE"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -307,16 +321,13 @@
                         android:layout_height="175dp"
                         android:id="@+id/rv_featured_horizontalProducts" />
                 </LinearLayout>
-                <View
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#c3c3c3"/>
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="#FFFFFF">
+                    android:background="#FFFFFF"
+                    android:layout_marginTop="6dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -337,28 +348,27 @@
                 <View
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="#c3c3c3"/>
+                    android:layout_height="2dp"
+                    android:background="#EEE"/>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:background="#FFFFFF">
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+
                     <com.workspaceit.themallbd.utility.AllProductGridView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/gridView_all_Product"
                         android:numColumns="2"
                         android:stretchMode="columnWidth"
-                        android:verticalSpacing="5dp"
-                        android:horizontalSpacing="5dp"
-                        android:layout_marginTop="5dp"
+                        android:verticalSpacing="2dp"
+                        android:horizontalSpacing="2dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:columnWidth="170dp"/>
+                        android:columnWidth="170dp"
+                        android:background="#EEE"/>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
