--- a/app/src/main/res/layout/custom_grid_view_item.xml
+++ b/app/src/main/res/layout/custom_grid_view_item.xml
@@ -3,8 +3,9 @@
     android:layout_width="160dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/border"
-    android:padding="16dp">
+    android:background="#FFFFFF"
+    android:padding="16dp"
+    >
 
 
     <ImageView
