--- a/app/src/main/res/layout/order_history_single_item.xml
+++ b/app/src/main/res/layout/order_history_single_item.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
     <LinearLayout
@@ -19,35 +20,33 @@
 
             <TextView
                 android:id="@+id/counter_order_history"
-                android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:background="#EAEAEA"
+                android:background="#911414"
                 android:gravity="center"
                 android:text="1"
 
-                android:textSize="18sp" />
+                android:textColor="#FFFFFF"
+
+                android:textSize="12sp" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_weight=".33"
-            android:text="Invoice Number:"
-            android:textSize="15sp" />
+
 
         <TextView
             android:id="@+id/invoice_number_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_weight=".42"
+            android:layout_weight=".75"
             android:text="Invyasydasgd"
-            android:textColor="#ff1919"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textColor="#333"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:gravity="right"
+            android:layout_marginRight="20dp"/>
 
     </LinearLayout>
 
@@ -55,9 +54,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:padding="10dp"
+
         android:weightSum="1">
 
         <TextView
@@ -66,6 +65,7 @@
             android:layout_weight=".23"
             android:text="Order Total:"
             android:textSize="15sp"
+            android:layout_marginLeft="20dp"
 
             />
 
@@ -83,10 +83,12 @@
         android:id="@+id/order_history_shipping_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_marginLeft="20dp"
         android:singleLine="false"
         android:text="AJShga sahdgahsdg"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="5dp"/>
 
 
 </LinearLayout>
