--- a/app/src/main/res/layout/activity_paypal_payment.xml
+++ b/app/src/main/res/layout/activity_paypal_payment.xml
@@ -1,11 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.themallbd.workspaceit.activity.PaypalPaymentActivity"
-    android:id="@+id/RelativeLayout01">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.themallbd.workspaceit.activity.PaypalPaymentActivity">
 
-</RelativeLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:background="#e6e6e6"
+            android:padding="5dp"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".7"
+                android:text="Amount:"
+                android:gravity="right"
+                android:layout_marginRight="8dp"
+                android:textSize="15sp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:text="1276123 BDT"
+                android:textSize="15sp"
+                android:id="@+id/amount_paypal_text_view"/>
+
+
+</LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:background="#f2f2f2"
+            android:orientation="horizontal"
+            android:padding="5dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".7"
+                android:text="PayPal Amount:"
+                android:gravity="right"
+                android:layout_marginRight="8dp"
+                android:textSize="15sp"
+                android:textColor="#961C1E"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:text="1276123 BDT"
+                android:textSize="15sp"
+                android:id="@+id/paypal_usd_text_view"
+                android:textColor="#961C1E"/>
+
+        </LinearLayout>
+        </LinearLayout>
+
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Pay by Paypal"
+        android:id="@+id/paypal_button"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:background="#7EC0EE"
+        android:textColor="#FFFFFF"/>
+
+
+</LinearLayout>
