--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.MainActivity"
+    tools:openDrawer="start"
+    >
 
     <FrameLayout
         android:id="@+id/container_body"
@@ -573,8 +575,17 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="end"
         app:headerLayout="@layout/header"
         app:menu="@menu/nav_drawer" />
+
+
+    <fragment android:name="com.themallbd.workspaceit.fragment.NavaigationDrawerFragment"
+        android:layout_gravity="start"
+        android:id="@+id/fragment"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        />
+
 
 </android.support.v4.widget.DrawerLayout>
